sass/styles.scss
// Your custom settings file to override Foundation defaults
@import "settings";

$black: #222222;
$neongreen : #80fe5c;
$neonred: #e74c2d;
$whitesmoke: #F7F7F7;
$green: #50841A;
$mainColor: $green;

// Comment out this import if you are customizing you imports below
@import "foundation";

// ----------------------------------------
// Import specific parts of Foundation by commenting the import "foundation"
// and uncommenting what you want below. You must uncomment the following if customizing

// @import "compass/css3";
// @import "foundation/settings";
// @import "foundation/functions/all";

// Control which mixins you have access too

// @import "foundation/mixins/clearfix";
// @import "foundation/mixins/css-triangle";
// @import "foundation/mixins/font-size";

// Must include next two for semantic grid to work

// @import "foundation/mixins/respond-to";
// @import "foundation/mixins/semantic-grid";

// @import "modular-scale";
// @import "foundation/common/globals";

// Must include the grid for any responsiveness

// @import "foundation/components/grid";

// Control which common styles get compiled

// @import "foundation/common/typography";
// @import "foundation/common/forms";

// Control which components you get if customizing

// @import "foundation/components/modules/buttons";
// @import "foundation/components/modules/tabs";
// @import "foundation/components/modules/ui";
// @import "foundation/components/modules/topbar";
// @import "foundation/components/modules/navbar";
// @import "foundation/components/modules/orbit";
// @import "foundation/components/modules/reveal";
// @import "foundation/components/modules/offcanvas";
// @import "foundation/components/modules/clearing";
// @import "foundation/components/modules/joyride";

// Media Queries Overrides
// @import "foundation/components/modules/mqueries";

@import "fonts";

@mixin headlineFont() {
	//font-family: share-regular, "Droid Serif", "American Typewriter", "Times New Roman", Times, serif;
	font-family: "Roboto Condensed", "Helvetica Neue", "HelveticaNeue", Arial, Helvetica, sans-serif, sans;

}

@mixin bodyFont() {
	// font-family: gentium-book-basic, "Helvetica Nueu Condensed", "Helvetica Condensed", "Arial Narrow", Arial, Helvetica, sans-serif, sans;
	font-family: "Roboto", "Helvetica Neue", "HelveticaNeue", Arial, Helvetica, sans-serif, sans;

}

html, body {
	height: 100%;
	min-height: 100%;
}

html {
	background: url('../images/audio-board-3.jpg') no-repeat fixed 50% 50% $black;
	@include background-size(cover);

	// &.theme-light {
	// 	background-image: url('../images/audio-board-white.jpg');
	// 	background-color: #FFF;
	// }

	@media screen and (min-width: 768px) {
		background-image: url('../images/audio-board-3-md.jpg');
	}

	@media screen and (min-width: 1025px) {
		background-image: url('../images/audio-board-3.jpg');
	}

}	

body {
	@include bodyFont;
	background: transparent none;

	@media screen and (max-width: 767px) {
		padding-bottom: 15px;
	}
}

h1, h2, h3 {
	@include headlineFont;
}

h4, h5, h6 {
	@include bodyFont;
}

hgroup {
	h1, h2, h3, h4, h5, h6 {
		margin-top: 0;
	}
}

#intro {
	color: $whitesmoke;
	width: 650px;
	height: 350px;
	position: absolute;
	left: 50%;
	top: 50%;
	margin-left: -325px;  
	margin-top: -175px;
	padding: 30px;
	background: rgba(#111111, 0.85);
	@include border-radius(12px);
	@include box-shadow(0 0 120px rgba(255,255,255,0.15));
	border: 2px solid $black;
	border: 2px solid rgba($black, 0.62);

	.heading {
		color: $whitesmoke;
		font-size: 48px;
		margin-bottom: .25em;
		// font-weight: normal; 
		@include text-shadow(2px 2px 0px #000000);

		span {
			// text-transform: uppercase;
		}

	}
	.subheading {
		font-size: 27px;
		font-weight: 200;
	}

	.button-group {
		clear: left;
		margin-top: 40px;
	}

	@media screen and (max-width: 767px) {
		width: 80%;
		height: auto;
		position: static;
		left: auto;
		top: auto;
		margin: 30px auto;

		.heading, .subheading {
			text-align: center;
		}
		.heading {
			font-size: 39px;
		}
		.subheading {
			font-size: 19px;
		}

	}

	@media screen and (max-width: 480px) {
		width: 90%;
		margin: 15px auto;
		padding: 15px;

	}

	@media screen and (min-width: 480px) {
		.button {
			.hide-for-small {
				display: inline !important;
			}
		}
	}
	@media screen and (max-width: 320px) {
		.button {
			font-size: 24px;

			.icon {
				margin: 0;
			}
		}
	}

}

#overlay {
	position: absolute;
	z-index: -1;
	top: 0;
	left: 0;
	bottom: 0;
	right: 0;
	background: url('../images/overlay-black.png') repeat scroll 0 0 transparent;
	@include opacity(0.2);
}

.button {
	.icon {
		vertical-align: text-bottom;
		margin-right: .5em;
	}
}

.circle-photo {
	overflow: hidden; 
	width: 200px;
	height: 200px;
	// @include border-radius(200em);
	-webkit-background-clip: padding-box; background-clip: padding-box;
	@include box-shadow(0px 0px 4px $black);
	border: 2px solid $black;
	margin: 0 30px 30px 0;
	float: left;

	img {
		width: 228px;
		height: 228px;
		max-width: 228px;
	}

	@media screen and (max-width: 767px) {
		width: 150px;
		height: 150px;
		float: none;
		margin: 15px auto;

		img {
			width: 170%;
			max-width: 200%;
			margin-left: -20px;
		}
	}
}
.subheading {
	color: lightgray;
}

